[gd_scene load_steps=21 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Bat.png" type="Texture" id=2]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Boxes/Aggrobox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Boxes/Softbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Fly",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 3.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.0
height = 8.0

[sub_resource type="CircleShape2D" id=10]
radius = 5.0

[sub_resource type="CircleShape2D" id=9]
radius = 44.1022

[sub_resource type="CapsuleShape2D" id=11]
radius = 3.0
height = 2.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 6 )
animation = "Fly"
frame = 1
playing = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8
HIT_CENTER = Vector2( 0, -12 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 10 )

[node name="Aggrobox" parent="." instance=ExtResource( 6 )]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="Aggrobox" index="0"]
modulate = Color( 0.0313726, 1, 0, 0.501961 )
shape = SubResource( 9 )

[node name="Softbox" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="Softbox" index="0"]
rotation = 1.5708
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 4

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Aggrobox" to="." method="_on_Aggrobox_body_entered"]
[connection signal="body_exited" from="Aggrobox" to="." method="_on_Aggrobox_body_exited"]
[connection signal="death" from="Stats" to="." method="_on_Stats_death"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="Aggrobox"]
[editable path="Softbox"]
